syntax = "proto3";
option java_package = "com.hiko.proto";
option java_multiple_files = true;

service BalanceService {
  // Sends a greeting
  rpc ChangeRequestBidirectional (stream ChangeRequest) returns (stream ChangeReply) {}
  rpc ChangeRequestListBidirectional (stream ChangeRequestList) returns (stream ChangeReplyList) {}
  rpc ChangeRequestUnary (ChangeRequest) returns (ChangeReply) {}
  rpc ChangeRequestListUnary (ChangeRequestList) returns (ChangeReplyList) {}
}

// The request message containing the user's name.
message ChangeRequest {
  string rid = 1;
  int32 type = 2;
  int64 amount = 3;
  int32 uid = 4;
}

message ChangeRequestList {
  repeated ChangeRequest changeRequests = 1;
}

// The response message containing the greetings
message ChangeReply {
  int32 status = 1;
}

message ChangeReplyList {
  repeated int32 status = 1;
}